--- a/.github/workflows/repositorya.yml
+++ b/.github/workflows/repositorya.yml
@@ -1,9 +1,10 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name:  WorkFlow A
 
 # Controls when the workflow will run
 on:
+
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
@@ -12,7 +13,15 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+     RepoB_workFlowName:
+      default: 'workFlowB'
 
+     RepoB_github_Account:
+      default: 'kiran8148'
+      
+     RepoB_github_info:
+      default: 'RepositoryB'
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
