--- a/.github/workflows/repositorya.yml
+++ b/.github/workflows/repositorya.yml
@@ -43,3 +43,15 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+
+      - name: Trigger WorkFlow
+        run: |
+         curl -L \
+          -X POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer 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" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/kiran8148/RepositoryB/dispatches
+        
+      
+      
