--- a/.github/workflows/repositorya.yml
+++ b/.github/workflows/repositorya.yml
@@ -49,7 +49,7 @@ jobs:
          curl -L \
           -X POST \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer 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 \
+          -H "Authorization: Bearer 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" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/kiran8148/RepositoryB/dispatches
         
