--- a/.github/workflows/repositorya.yml
+++ b/.github/workflows/repositorya.yml
@@ -50,7 +50,9 @@ jobs:
           -X POST \
           -H "Authorization: Bearer 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" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/kiran8148/RepositoryB/dispatches
+          -d '{"ref":"main","inputs":{"name":one}}'
+          https://api.github.com/kiran8148/RepositoryB/actions/workflows/repositoryb.yml \
+          
         
       
       
