--- a/.github/workflows/repositorya.yml
+++ b/.github/workflows/repositorya.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
          curl -L \
           -X POST \
-          -H "Authorization: Bearer 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" \
+          -H "Authorization: token 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" \
            https://api.github.com/kiran8148/RepositoryB/actions/workflows/repositoryb.yml \
           -d '{"ref":"main","inputs":{"name":one}}'
           
