--- a/.github/workflows/repositorya.yml
+++ b/.github/workflows/repositorya.yml
@@ -10,19 +10,10 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+env:
+  GITHUB_TOKEN: ${{ secrets.PAT_NEW_TOKEN }} 
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-    inputs:
-     RepoB_workFlowName:
-      default: 'workFlowB'
-
-     RepoB_github_Account:
-      default: 'kiran8148'
-      
-     RepoB_github_info:
-      default: 'RepositoryB'
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+  
 jobs:
   send-request-to-backend:
     runs-on: ubuntu-latest
@@ -31,7 +22,7 @@ jobs:
         run: |
           curl -X POST 'https://api.github.com/repos/kiran8148/RepositoryB/actions/workflows/repositoryb.yml/dispatches' \
           -H 'Accept: application/vnd.github.everest-preview+json' \
-          -H 'Authorization: Bearer ${{ secrets.PAT_NEW_TOKEN }}' \
+          -H 'Authorization: Bearer ${{ env.GITHUB_TOKEN }}' \
           -d '{"ref":"main"}'
           
   # This workflow contains a single job called "build"
